# OpenXR-Quad-WebView

./: .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle
assets/: webview.html
cmake/: FindOpenGLES.cmake
src/: android.cpp  android.h  android_native_app_glue.cpp  android_native_app_glue.h  check.h  glutils.cpp  glutils.h  log.cpp  main.cpp  main.h  program.cpp  program.h  webview.cpp  webview.h  xrmath.h  xrq.cpp  xrq.h  xruipanel.cpp  xruipanel.h
